// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DetailsList rendering renders expected elements 1`] = `
<DetailRegion
  id="random-id-label"
  label="Test Label"
>
  <ul
    aria-labelledby="random-id-label"
    className="DetailsList__grid"
    id="random-id"
  >
    <div />
  </ul>
</DetailRegion>
`;

exports[`DetailsList rendering renders expected elements when optional properties are set 1`] = `
<DetailRegion
  className="TestClass"
  id="random-id-label"
  infoText="Test info"
  infoTextPlacement="bottom"
  label="Test Label"
  level="h4"
>
  <ul
    aria-labelledby="random-id-label"
    className="DetailsList__grid"
    id="random-id"
  />
</DetailRegion>
`;
